...
    coordinates: number[][][];
  };
};

export const CAMPUS_BUILDINGS: {
  LOY: CampusBuilding[];
  SGW: CampusBuilding[];
} = {
  LOY: [
    {
      "code": "AD",
      "name": "AD Building",
      "long_name": "Administration Building",
...
        ],
        "type": "Polygon"
      }
    },
    {
      "code": "ER",
      "name": "ER Building",
      "long_name": "ER Building",
      "address": "2155 Guy Street",
      "latitude": 45.496428,
      "longitude": -73.57999,
      "shape": {
        "coordinates": [
...
