...
          drawerIcon: DirectoryDrawerIcon,
        }}
      />
      <Drawer.Screen
        name="favorites"
        options={{
          ...getDrawerScreenOptions("Favorite Locations"),
          drawerIcon: FavoritesDrawerIcon,
        }}
      />
      <Drawer.Screen
        name="schedule"
        options={{
...
