...
  });
export type ShuttleLocationsType = {
  LOY: {
    lat: number;
    lng: number;
  };
  SGW: {
    lat: number;
    lng: number;
  };
};

export const useGetShuttlePositions = () => {
...
