...
      <View style={BottomSheetStyles.fakeHandleContainer}>
        <View style={BottomSheetStyles.fakeHandleBar} />
      </View>

      <View style={BottomSheetStyles.headerContainer}>
        <View style={BottomSheetStyles.textContainer}>
          <Text style={BottomSheetStyles.name}>Map Settings</Text>
        </View>
      </View>

      <BottomSheetScrollView style={BottomSheetStyles.scrollContent}>
        {Object.entries(mapSettings).map(([key, value]) => (
          <SettingListItem
...
